--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>59.0</version>
+	<types>
+		<members>Journey__c.Employee_Email__c</members>
+		<members>Journey__c.Employee_Name__c</members>
+		<members>Journey__c.Manager_Email__c</members>
+		<members>Journey__c.Manager_Name__c</members>
+		<members>Journey__c.Onboarding_Start_Date__c</members>
+		<members>Journey__c.Template__c</members>
+		<members>Task__c.Completed__c</members>
+		<members>Task__c.Estimated_Completion_Date__c</members>
+		<members>Task__c.Journey_del__c</members>
+		<members>Task__c.Relative_Days_to_Complete__c</members>
+		<members>Task__c.Task_Description__c</members>
+		<members>Task__c.Template__c</members>
+		<members>Template__c.Task__c</members>
+		<name>CustomField</name>
+	</types>
+	<version>58.0</version>
 </Package>
