--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -8,6 +8,7 @@
 		<members>Journey__c.Onboarding_Start_Date__c</members>
 		<members>Journey__c.Template__c</members>
 		<members>Task__c.Completed__c</members>
+		<members>Task__c.Completion_Status__c</members>
 		<members>Task__c.Estimated_Completion_Date__c</members>
 		<members>Task__c.Journey_del__c</members>
 		<members>Task__c.Relative_Days_to_Complete__c</members>
